fix: KTL-587: compiler info doesn't fit on a mobile screen

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -459,6 +459,10 @@ $wt-color-azure: #167dff;
   &__open-editor {
     flex: 1 1 0;
   }
+
+  &__target, &__version {
+    white-space: nowrap;
+  }
 }
 
 .CodeMirror-hints {
